--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "axios": "0.18.0",
+    "bootstrap": "4.1.3",
+    "vee-validate": "2.1.3",
+    "vlf": "1.0.5",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
